# Appwave

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Procfile.dev  README.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: Cargo.toml  electron-builder.json  package.json  tauri.conf.json  tsconfig.main.json  tsconfig.preload.json
app/capabilities/: default.json
app/frontend/: package.json
app/frontend/src/: App.tsx  index.css
app/frontend/src/components/: BuildAndRun.tsx  GetStarted.test.tsx  GetStarted.tsx  ProjectSelector.tsx  StreamViewer.tsx
app/frontend/src/lib/: api.ts  updater.test.ts  updater.ts
app/frontend/src/pages/: OpenProject.tsx  ProjectEditor.tsx
app/migrations/: 20241224100000_drop_project_type.sql
app/src/: lib.rs
app/src/db/: migrations.rs  mod.rs
app/src/db/entity/: projects.rs  settings.rs
app/src/main/: index.ts  server-standalone.ts  server.ts
app/src/main/routes/: health.ts  projects.ts  simulator.ts  xcode.ts
app/src/main/services/: database.ts  process-manager.ts  project-scaffold.ts  project-validation.ts  projects.ts  simulator.ts  xcode.ts
app/src/preload/: index.ts
app/src/routes/: mod.rs  projects.rs  xcode.rs
app/src/shared/: ipc-types.ts
app/src/simulator/: mod.rs
app/src/xcode/: build.rs  mod.rs  schemes.rs
app/tests/: xcode_integration_tests.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
docs/: phase-2-completion.md  simulator-server.md  simulator-streaming-roadmap.md  simulator-streaming.md
frontend/: index.html  package.json  pnpm-lock.yaml  (+1 more)
(+34 files in other folders)
