[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
appwave-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
